App height on mobile fix 2.0

--- a/scss/pages/app/style.scss
+++ b/scss/pages/app/style.scss
@@ -58,6 +58,7 @@ body{margin: 0;padding: 0;font-family: $fontfamily;font-size: 16; color: $fontco
 
 .wrapper {
     min-height: 100vh;
+    height: 100vh;
     height:calc(var(--vh, 1vh) * 100);
     width: 100%;
 
